--- a/d06/cor.html
+++ b/d06/cor.html
@@ -580,4 +580,8 @@ API
 Training
 Blog
 About
-
+Hello, pour la personne qui a ecrasé du chocolat c'est peut être moi.
+Quelqu'un était passé à 8h avec une boîte de chocolats pour en donner
+à tout le mondee et avait fais tomber la boîte derrière moi en m'en
+donnant un. On pensait avoir tout ramassé mais apparemment non. Je
+suis désolé, si j'avais vu qu'il en restait je l'aurais evidemment ramassé.
